--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
+    "nodemailer": "^7.0.10",
     "parser": "^0.1.4",
     "uuid": "^13.0.0"
   },
